k8/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
  labels:
    name: web-app
